force-app/main/default/objects/EDMSFile__c/EDMSFile__c.object-meta.xml
<CustomObject>
    <label>EDMSFile</label>
    <nameField>
        <label>EDMSFileUpload 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>