force-app/main/default/objects/EDMSFile__c/fields/FileExt__c.field-meta.xml
<CustomField>
    <fullName>FileExt__c</fullName>
    <label>FileExt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>