force-app/main/default/objects/EDMSFile__c/fields/MDMRequestNumer__c.field-meta.xml
<CustomField>
    <fullName>MDMRequestNumer__c</fullName>
    <displayFormat>CRM{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>MDMRequestNumer</label>
    <type>AutoNumber</type>
</CustomField>