force-app/main/default/objects/EDMSFile__c/fields/TargetId__c.field-meta.xml
<CustomField>
    <fullName>TargetId__c</fullName>
    <label>TargetId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>