force-app/main/default/objects/EDMSFile__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>계약서원본</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>사업자등록증</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>인감증명서(개인/법인)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>법인등기부 등본</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>장려금약정서</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>사용인감계</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>개인정보활용동의서</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>상계처리약정서</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>계약이행완료확인서</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>계약해지합의서</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>관리처등록의뢰서</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>